; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/sort/extr_coll.c_setsuffix.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/sort/extr_coll.c_setsuffix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @setsuffix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setsuffix(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %22 [
    i32 107, label %6
    i32 75, label %6
    i32 77, label %8
    i32 71, label %10
    i32 84, label %12
    i32 80, label %14
    i32 69, label %16
    i32 90, label %18
    i32 89, label %20
  ]

6:                                                ; preds = %2, %2
  %7 = load i8*, i8** %4, align 8
  store i8 1, i8* %7, align 1
  br label %24

8:                                                ; preds = %2
  %9 = load i8*, i8** %4, align 8
  store i8 2, i8* %9, align 1
  br label %24

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  store i8 3, i8* %11, align 1
  br label %24

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  store i8 4, i8* %13, align 1
  br label %24

14:                                               ; preds = %2
  %15 = load i8*, i8** %4, align 8
  store i8 5, i8* %15, align 1
  br label %24

16:                                               ; preds = %2
  %17 = load i8*, i8** %4, align 8
  store i8 6, i8* %17, align 1
  br label %24

18:                                               ; preds = %2
  %19 = load i8*, i8** %4, align 8
  store i8 7, i8* %19, align 1
  br label %24

20:                                               ; preds = %2
  %21 = load i8*, i8** %4, align 8
  store i8 8, i8* %21, align 1
  br label %24

22:                                               ; preds = %2
  %23 = load i8*, i8** %4, align 8
  store i8 0, i8* %23, align 1
  br label %24

24:                                               ; preds = %22, %20, %18, %16, %14, %12, %10, %8, %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
